--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
 @media screen and (min-width: 480px) {
     body {
-        background-color: blanchedalmond;
+        background-color: rgb(88, 83, 74);
         color: rgb(0, 238, 255);
     }
+}
+p {
+    color: rgb(255, 0, 212);
+}
+.author {
+    color: violet;
+    font-size: 12px;
+}
+p.author {
+    font-size: 12px;
+}
+img {
+    float: center;
 }
